--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             width: 200px;
             padding: 20px;
             border-radius: 5px;
-            background-color: white;
+            background-color: orangered;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         }
 
