--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Electron Auto Update Example</title>
+    <script src="main.js"></script>
     <style>
         body {
             box-sizing: border-box;
