--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 20px;
             font-family: sans-serif;
-            background-color: orangered;
+            background-color: blue;
             text-align: center;
         }
 
